# bourgeoisor.github.io

./: .gitignore  404.html  CNAME  README.md  atom.xml  build.py  dev.sh  index.html  make.sh  md2html.py  pyproject.toml  requirements.txt  robots.txt  rss.xml  run.sh  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gh-pages-deploy.yaml
about/: index.html
ai/: index.html
blog/: index.html
communication-style/: index.html
contact/: index.html
css/: style.css
decade-of-flights/: index.html
employment/: index.html
hello-world/: index.html
home/: app.js  index.html  startpage.css  startpage.js
home/bookmarks/: app.js  bookmarks.css  bookmarks.js  index.html  style.css
js/: particles.json
monospace/: index.html
my-personal-website/: index.html
notes/blog/: ai.md  communication-style.md  decade-of-flights.md  hello-world.md  monospace.md  my-personal-website.md  obsidian.md  thirtieth.md
notes/meta/: about.md  ai.md  blog.md  contact.md  employment.md  index.md  now.md  projects.md  resume.md
notes/wip/: !TEMPLATE.md  !template.md  ai.md  hello-world.md  iso-8601.md  monospace.md  no-hello.md  (+2 more)
now/: index.html
obsidian/: index.html
projects/: index.html
resume/: index.html
static/: style.css
static-root/: CNAME
templates/: !blog-list.html  !prefix.html  !suffix.html  _blog-list.html  _prefix.html  _suffix.html  blog-index.html  blog.html  default.html  index.html
thirtieth/: index.html
(+6 files in other folders)
