[project]
name = "olivi-eh-github-io"
version = "1.0.0"
description = "Olivier Bourgeois' personal website & blog static site generator"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Olivier Bourgeois" }
]
keywords = ["static-site-generator", "blog", "portfolio", "markdown", "jinja2", "python3"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2==3.1.5",
    "markdown==3.7",
]

[project.urls]
Homepage = "https://olivi-eh.dev"
Repository = "https://github.com/olivi-eh/olivi-eh.github.io"
